[package]
name = "ri-utilization-plotter"
version = "0.1.0"
authors = ["mozamimy <alice@mozami.me>"]
edition = "2018"

[dependencies]
chrono = { version = "^0.4.6", features = ["serde"] }
env_logger = "^0.6.0"
lambda_runtime = "^0.1.0"
log = "^0.4.6"
rusoto_core = "^0.35.0"
rusoto_cloudwatch = "^0.35.0"
rusoto_ce = "^0.35.0"
serde = "^1.0.80"
serde_derive = "^1.0.80"
serde_json = "^1.0.33"

[[bin]]
name = "bootstrap"
path = "src/main.rs"
