[package]
name = "ri-utilization-plotter"
version = "0.1.0"
authors = ["mozamimy <alice@mozami.me>"]
edition = "2018"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.6"
lambda_runtime = "0.2"
log = "0.4"
rusoto_core = "0.40"
rusoto_cloudwatch = "0.40"
rusoto_ce = "0.40"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[[bin]]
name = "bootstrap"
path = "src/main.rs"
